@@ -16,7 +16,6 @@
 
 package de.adorsys.psd2.aspsp.profile.config;
 
-import de.adorsys.psd2.aspsp.profile.domain.SupportedAccountReferenceField;
 import de.adorsys.psd2.xs2a.core.ais.BookingStatus;
 import de.adorsys.psd2.xs2a.core.profile.ScaApproach;
 import lombok.Data;
@@ -36,19 +35,11 @@ public class ProfileConfiguration implements InitializingBean {
     public void afterPropertiesSet() {
         setDefaultScaApproach(ScaApproach.REDIRECT);
         setDefaultBookingStatus(BOOKED);
-        setAvailableAccountReferenceField(SupportedAccountReferenceField.IBAN); //Sets default Account Reference Field
     }
 
     private void setDefaultScaApproach(ScaApproach scaApproach) {
         if (CollectionUtils.isEmpty(setting.getScaApproaches())) {
             setting.setScaApproaches(Collections.singletonList(scaApproach));
-        }
-    }
-
-    private void setAvailableAccountReferenceField(SupportedAccountReferenceField defaultSupportedAccountReferenceField) {
-        List<SupportedAccountReferenceField> supportedAccountReferenceFields = setting.getSupportedAccountReferenceFields();
-        if (!supportedAccountReferenceFields.contains(defaultSupportedAccountReferenceField)) {
-            supportedAccountReferenceFields.add(defaultSupportedAccountReferenceField);
         }
     }
 
