@@ -2,32 +2,20 @@
   "access": {
     "accounts": [
       {
-        "bban": 89370400440532010000,
         "currency": "EUR",
-        "iban": "DE89370400440532013000",
-        "maskedPan": "2356xxxxxx1234",
-        "msisdn": "+49(0)911 360698-0",
-        "pan": "2356 5746 3217 1234"
+        "iban": "DE89370400440532013000"
       }
     ],
     "balances": [
       {
-        "bban": 89370400440532010000,
         "currency": "EUR",
-        "iban": "DE89370400440532013000",
-        "maskedPan": "2356xxxxxx1234",
-        "msisdn": "+49(0)911 360698-0",
-        "pan": "2356 5746 3217 1234"
+        "iban": "DE89370400440532013000"
       }
     ],
     "transactions": [
       {
-        "bban": 89370400440532010000,
         "currency": "EUR",
-        "iban": "DE89370400440532013000",
-        "maskedPan": "2356xxxxxx1234",
-        "msisdn": "+49(0)911 360698-0",
-        "pan": "2356 5746 3217 1234"
+        "iban": "DE89370400440532013000"
       }
     ]
   },
