@@ -2,12 +2,8 @@
   "batchBookingPreferred": false,
   "requestedExecutionDate": "2019-10-10",
   "debtorAccount": {
-    "bban": 280019400644750000,
     "currency": "EUR",
-    "iban": "LU280019400644750000",
-    "maskedPan": "2356xxxxxx1234",
-    "msisdn": "+49(0)911 360698-0",
-    "pan": "2356 5746 3217 1234"
+    "iban": "LU280019400644750000"
   },
   "payments": [
     {
@@ -17,12 +13,8 @@
         "currency": "EUR"
       },
       "creditorAccount": {
-        "bban": 89370400440532013000,
         "currency": "EUR",
-        "iban": "DE21500105176194357737",
-        "maskedPan": "2356xxxxxx1234",
-        "msisdn": "+49(0)911 360698-0",
-        "pan": "2356 5746 3217 1234"
+        "iban": "DE21500105176194357737"
       },
       "creditorAgent" : "AAAADEBBXXX",
       "creditorName": "Telekom",
@@ -42,12 +34,8 @@
         "currency": "EUR"
       },
       "creditorAccount": {
-        "bban": 89370400440532013000,
         "currency": "EUR",
-        "iban": "DE54500105173424724776",
-        "maskedPan": "2356xxxxxx1234",
-        "msisdn": "+49(0)911 360698-0",
-        "pan": "2356 5746 3217 1234"
+        "iban": "DE54500105173424724776"
       },
       "creditorAgent" : "AAAADEBBXXX",
       "creditorName": "Telekom",
